--- a/Earth 2.0.xcodeproj/xcshareddata/xcschemes/SnipTheVine.xcscheme
+++ b/Earth 2.0.xcodeproj/xcshareddata/xcschemes/SnipTheVine.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-               BuildableName = "SnipTheVine.app"
+               BuildableName = "Earth 2.0.app"
                BlueprintName = "Earth 2.0"
                ReferencedContainer = "container:Earth 2.0.xcodeproj">
             </BuildableReference>
@@ -31,7 +31,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-            BuildableName = "SnipTheVine.app"
+            BuildableName = "Earth 2.0.app"
             BlueprintName = "Earth 2.0"
             ReferencedContainer = "container:Earth 2.0.xcodeproj">
          </BuildableReference>
@@ -54,7 +54,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-            BuildableName = "SnipTheVine.app"
+            BuildableName = "Earth 2.0.app"
             BlueprintName = "Earth 2.0"
             ReferencedContainer = "container:Earth 2.0.xcodeproj">
          </BuildableReference>
@@ -71,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-            BuildableName = "SnipTheVine.app"
+            BuildableName = "Earth 2.0.app"
             BlueprintName = "Earth 2.0"
             ReferencedContainer = "container:Earth 2.0.xcodeproj">
          </BuildableReference>
