--- a/Engine Tests/Engine Tests.xcodeproj/xcshareddata/xcschemes/Engine Tests.xcscheme
+++ b/Engine Tests/Engine Tests.xcodeproj/xcshareddata/xcschemes/Engine Tests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1320"
+   LastUpgradeVersion = "1330"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-               BuildableName = "Astral One.app"
-               BlueprintName = "Astral One"
-               ReferencedContainer = "container:Astral One.xcodeproj">
+               BlueprintIdentifier = "52AB0704280200540039B47D"
+               BuildableName = "Engine Tests.app"
+               BlueprintName = "Engine Tests"
+               ReferencedContainer = "container:Engine Tests.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,24 +27,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-            BuildableName = "Astral One.app"
-            BlueprintName = "Astral One"
-            ReferencedContainer = "container:Astral One.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "52F9047427FCD10600D1AC97"
-               BuildableName = "Unit Tests.xctest"
-               BlueprintName = "Unit Tests"
-               ReferencedContainer = "container:Astral One.xcodeproj">
+               BlueprintIdentifier = "52AB0714280200560039B47D"
+               BuildableName = "Engine TestsTests.xctest"
+               BlueprintName = "Engine TestsTests"
+               ReferencedContainer = "container:Engine Tests.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -63,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-            BuildableName = "Astral One.app"
-            BlueprintName = "Astral One"
-            ReferencedContainer = "container:Astral One.xcodeproj">
+            BlueprintIdentifier = "52AB0704280200540039B47D"
+            BuildableName = "Engine Tests.app"
+            BlueprintName = "Engine Tests"
+            ReferencedContainer = "container:Engine Tests.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -80,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D2A5F1FF1F4A9144005CD714"
-            BuildableName = "Astral One.app"
-            BlueprintName = "Astral One"
-            ReferencedContainer = "container:Astral One.xcodeproj">
+            BlueprintIdentifier = "52AB0704280200540039B47D"
+            BuildableName = "Engine Tests.app"
+            BlueprintName = "Engine Tests"
+            ReferencedContainer = "container:Engine Tests.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
