--- a/Engine Tests/Engine Tests.xcodeproj/xcshareddata/xcschemes/Engine Tests.xcscheme
+++ b/Engine Tests/Engine Tests.xcodeproj/xcshareddata/xcschemes/Engine Tests.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "52AB0714280200560039B47D"
-               BuildableName = "Engine TestsTests.xctest"
+               BuildableName = "Engine Unit Tests.xctest"
                BlueprintName = "Engine Unit Tests"
                ReferencedContainer = "container:Engine Tests.xcodeproj">
             </BuildableReference>
