--- a/Pathfinder/Stone to Space.xcodeproj/xcshareddata/xcschemes/Stone to Space.xcscheme
+++ b/Pathfinder/Stone to Space.xcodeproj/xcshareddata/xcschemes/Stone to Space.xcscheme
@@ -39,9 +39,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      enableGPUValidationMode = "1"
-      allowLocationSimulation = "YES"
-      GPUProfilerEnabled = "No">
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
